feat(counterparty): 添加对手方账户实体及相关搜索功能